update routes, delete commands and implements StartPvto
