# src/server/server.routes.ts
@@ -8,8 +8,8 @@ const ServerRouter = Router();
 // Get 
 ServerRouter.get('/', Controller.get) // Get all servers
 ServerRouter.get('/file',Controller.getFiles) // Search file in server
-ServerRouter.get('/:gridname', Controller.getByGridName) // Get server by gridName
-ServerRouter.get('/files/:gridname', Controller.getFiles) // Get files by gridNames
+ServerRouter.get('/:gridName', Controller.getByGridName) // Get server by gridName
+ServerRouter.get('/files/:gridName', Controller.getFiles) // Get files by gridNames
 
 // Post
 ServerRouter.post('/',validateResource(CreateServerSchema), Controller.create) // create server
@@ -19,6 +19,6 @@ ServerRouter.post('/file', Controller.searchFile) // Search file in server
 ServerRouter.put('/file',) // Update server file
 
 // Delete
-ServerRouter.delete('/:gridname', Controller.delete) // Delete server
+ServerRouter.delete('/:gridName', Controller.delete) // Delete server
 
 export default ServerRouter;
