# src/server/services/server.ts
@@ -1,4 +1,4 @@
-import { CreateServerService, ConfigServerService, ConfigurePvto } from "./";
+import { CreateServerService, ConfigServerService, ConfigurePvto, StartPvto } from "./";
 import { BadRequestError } from "../../middlewares/global-errors";
 import { assembleSubmissionData } from "../utils";
 import { CreateServerDto } from "../server.dto";
@@ -15,6 +15,9 @@ export async  function authenticateAndCreateServer(createServerDto: CreateServer
         // create pvto server
         ConfigurePvto(server.pvtoPath, data) // create .env file
 
+        // start pvto server
+        await StartPvto(server.pvtoPath)
+        
         return server
     } catch (error) {  
        throw new BadRequestError(`${(error as Error).message}`);
